# JAV-Archivist

./: .gitignore  README.ja.md  README.ko.md  README.md  README.zh.md  package.json  pnpm-lock.yaml  vite.config.ts
docs/superpowers/plans/: 2026-04-09-core-backend.md  2026-04-09-metadata-enhancement.md  2026-04-10-tag-filter.md  2026-04-11-auto-scrape.md  2026-04-11-filterbar-cleanup.md  2026-04-11-scrape-ux-redesign.md  2026-04-12-cinema-player-feedback.md  2026-04-12-local-thumbnails-folder-grouping.md  2026-04-12-scan-result-toast.md  2026-04-12-video-detail-redesign.md
docs/superpowers/specs/: 2026-04-08-frontend-design.md  2026-04-09-core-backend-design.md  2026-04-09-metadata-enhancement-design.md  2026-04-10-asset-protocol-media-design.md  2026-04-10-logging-system-design.md  2026-04-10-tag-filter-design.md  2026-04-10-videocard-redesign-design.md  2026-04-11-auto-scrape-design.md  2026-04-11-filterbar-cleanup-design.md  2026-04-12-scan-result-toast.md  (+7 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  ffmpeg.rs  lib.rs  logging.rs  media.rs  models.rs  player.rs  scanner.rs  watcher.rs
src-tauri/src/scraper/: fc2.rs  http.rs  image.rs  javbus.rs  javdb.rs  javten.rs  mod.rs  r18dev.rs  types.rs
src-tauri/tests/fixtures/: fc2_sample.html  javbus_sample.html  javdb_detail_sample.html  javten_sample.html  r18_sample.json
src/hooks/: useFilteredVideos.ts  useTauriCommand.ts
src/lib/: mockData.ts  utils.ts
src/pages/: ActorsPage.tsx  LibraryPage.tsx  LogPage.tsx  MakersPage.tsx  SeriesPage.tsx  SettingsPage.tsx  TagsPage.tsx
src/stores/: libraryStore.ts  logStore.ts  playerStore.ts
src/types/: index.ts
(+24 files in other folders)
