[package]
name = "jav-archivist"
version = "0.1.0"
description = "JAV media library manager"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
regex = "1"
walkdir = "2"
open = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rquest = "5.1"
rquest-util = "2.2"
scraper = "0.22"
tokio = { version = "1", features = ["sync", "time"] }
tauri-plugin-dialog = "2.7.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
tracing-appender = "0.2"
notify = { version = "8", default-features = false }
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Graphics_Imaging",
    "Media_MediaProperties",
] }

[dev-dependencies]
tempfile = "3"

